--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,37 +1,36 @@
 <%= form_with(model: user, local: true) do |form| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+    <div class="row">
+      <div class="col">
+        <% if user.errors.any? %>
+            <div id="error_explanation" class=" alert alert-danger">
+              <h2 class="h5"><%= pluralize(user.errors.count, 'error') %>:</h2>
 
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label 'User name' %>
-    <%= form.text_field :name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
-
-    <div class="field">
-      <%= form.label :password %>
-      <%= form.password_field :password %>
+              <ul class="list-unstyled">
+                <% user.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+        <% end %>
+      </div>
     </div>
 
-    <div class="field">
-      <%= form.label 'Confirm password' %>
-      <%= form.password_field :password_confirmation %>
+    <div class="row form-group">
+      <div class="col"><%= form.text_field :first_name, class: 'form-control', placeholder: 'First name' %></div>
+      <div class="col"><%= form.text_field :last_name, class: 'form-control', placeholder: 'Last name' %></div>
     </div>
 
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+    <div class="form-group">
+      <%= form.text_field :email, class: 'form-control', placeholder: 'Your email' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.password_field :password, class: 'form-control', placeholder: 'Your new password' %>
+    </div>
+
+    <div class="form-group">
+      <%= form.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirm your password' %>
+    </div>
+
+    <%= form.submit 'Sign up!', class: 'btn btn-success btn-block' %>
 <% end %>
