--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,41 @@
-<h1>New User</h1>
+<div class="row">
+  <div class="col-sm-12">
+    <nav class="navbar navbar-dark bg-primary">
+      <h1 class="navbar-brand text-light">Danebook</h1>
+      <%= form_with url: session_path, class: 'form-inline' do |form| %>
+          <div class="form-control">
+            <label>
+              Email:
+              <%= form.text_field :email %>
+            </label>
+          </div>
 
-<%= render 'form', user: @user %>
+          <div class="form-control">
+            <label>
+              Password:
+              <%= form.password_field :password %>
+            </label>
+          </div>
 
-<%= link_to 'Back', users_path %>
+          <div><%= form.submit 'Login', class: 'btn btn-primary' %></div>
+      <% end %>
+    </nav>
+  </div>
+</div>
+
+<div class="row top-buffer">
+  <div class="col-sm-7">
+    <h1 class="h3">Connect with all your friends!</h1>
+    <ul>
+      <li class="text-secondary">See photos and updates in your news feed</li>
+      <li class="text-secondary">Post your status for the world to see from your profile</li>
+      <li class="text-secondary">Get in touch with your friends by "friending" them</li>
+      <li class="text-secondary">Like things because you're a positive person!</li>
+    </ul>
+
+  </div>
+  <div class="col-sm-5">
+    <h1 class="h2">Sign up</h1>
+    <%= render 'form', user: @user %>
+  </div>
+</div>
