--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <div class="row"><p id="notice"><%= notice %></p></div>
+      <%= yield %>
+    </div>
   </body>
 </html>
