--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Users</h1>
 <% if logged_in_user? %>
     <p><%= link_to 'Sign out', session_path, method: :delete %></p>
@@ -10,8 +8,7 @@
 <table>
   <thead>
   <tr>
-    <th>Username</th>
-    <th>Email</th>
+    <th>Login</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -19,7 +16,6 @@
   <tbody>
   <% @users.each do |user| %>
       <tr>
-        <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <% if current_user && current_user.id == user.id %>
