--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Username:</strong>
-  <%= @user.name %>
+  <%= "#{@user.first_name} #{@user.last_name}" %>
 </p>
 
 <p>
