--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,10 +15,13 @@
       </div>
     </div>
 
-    <div class="row form-group">
-      <div class="col"><%= form.text_field :first_name, class: 'form-control', placeholder: 'First name' %></div>
-      <div class="col"><%= form.text_field :last_name, class: 'form-control', placeholder: 'Last name' %></div>
-    </div>
+    <%= form.fields_for :profile do |profile_fields| %>
+        <div class="row form-group">
+          <div class="col"><%= profile_fields.text_field :first_name, class: 'form-control', placeholder: 'First name' %></div>
+          <div class="col"><%= profile_fields.text_field :last_name, class: 'form-control', placeholder: 'Last name' %></div>
+        </div>
+    <% end %>
+
 
     <div class="form-group">
       <%= form.text_field :email, class: 'form-control', placeholder: 'Your email' %>
@@ -32,20 +35,22 @@
       <%= form.password_field :password_confirmation, class: 'form-control', placeholder: 'Confirm your password' %>
     </div>
 
-    <fieldset class="form-group">
-      <legend>Birthday</legend>
-      <%= form.date_select :birthdate,
-                           { order: [:month, :day, :year],
-                             start_year: Date.today.year - 100,
-                             end_year: Date.today.year - 12,
-                             selected: Date.today.year - 12 },
-                           class: 'custom-select' %>
-    </fieldset>
+    <%= form.fields_for :profile do |profile_fields| %>
+        <fieldset class="form-group">
+          <legend>Birthday</legend>
+          <%= profile_fields.date_select :birthdate,
+                                         { order: [:month, :day, :year],
+                                           start_year: Date.today.year - 100,
+                                           end_year: Date.today.year - 12 },
+                                         class: 'custom-select' %>
+        </fieldset>
 
-    <fieldset class="form-group">
-      <legend>Sexual identity</legend>
-        <%= form.collection_select :sexual_ident, User.sexual_idents, :first, :first %>
-    </fieldset>
+        <fieldset class="form-group">
+          <legend>Sexual identity</legend>
+          <%= profile_fields.collection_select :sexual_id, Profile.sexual_ids, :first, :first %>
+        </fieldset>
+    <% end %>
+
 
     <%= form.submit 'Sign up!', class: 'btn btn-success btn-block' %>
 <% end %>
