--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,83 @@
-<p>
-  <strong>Username:</strong>
-  <%= "#{@user.first_name} #{@user.last_name}" %>
-</p>
+<div class="row">
+  <div class="col-sm-10 offset-sm-1 .offset-md-1">
+    <div class="row">
+      <div class="col-sm-12 profile-large-image">
+        <div class="row">
+          <div class="col-sm-3">
+            <img src="http://lorempixel.com/150/200/people" alt="">
+          </div>
+          <div class="col-sm-8">
+            <p class="h4">
+              <%= profile.name %>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <ul class="nav nav-pills col-sm-7 offset-sm-3">
+        <li class="nav-item"><a class="nav-link" href="#">Timeline</a></li>
+        <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Photos</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Friends</a></li>
+        <li class="nav-item">
+          <% if current_user && current_user.id == @user.id %>
+              <%= link_to 'Edit profile', edit_user_path(@user), class: 'nav-link' %>
+          <% end %>
+        </li>
+      </ul>
+    </div>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+    <div class="row">
+      <div class="col-sm-12 top-buffer">
+        <h1 class="h3 text-center bg-info">About</h1>
+      </div>
+    </div>
+    <div class="row top-buffer">
+      <div class="col-sm-5">
+        <h2 class="h4">Basic information</h2>
+        <div class="row">
+          <div class="col-sm-5"><strong>Birthday:</strong></div>
+          <div class="col-sm-7"><%= profile.birthdate %></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-5"><strong>College:</strong></div>
+          <div class="col-sm-7">{Missing info}</div>
+        </div>
+        <div class="row">
+          <div class="col-sm-5"><strong>Hometown:</strong></div>
+          <div class="col-sm-7">{Missing info}</div>
+        </div>
+        <div class="row">
+          <div class="col-sm-5"><strong>Lives at:</strong></div>
+          <div class="col-sm-7">{Missing info}</div>
+        </div>
 
-<% if current_user && current_user.id == @user.id %>
-    <%= link_to 'Edit', edit_user_path(@user) %> |
-<% end %>
-<%= link_to 'Back', users_path %>
+        <h2 class="h4 top-buffer">Contact information</h2>
+        <div class="row">
+          <div class="col-sm-5"><strong>Email</strong></div>
+          <div class="col-sm-7"><%= @user.email %></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-5"><strong>Telephone</strong></div>
+          <div class="col-sm-7">{Missing info}</div>
+        </div>
+      </div>
+
+
+      <div class="col-sm-7">
+        <h2 class="h4">Words to live by</h2>
+        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean
+          collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+        <h2 class="h4 top-buffer">About me</h2>
+        <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado
+          daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach
+          carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin
+          onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi
+          beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper
+          artichoke.</p>
+      </div>
+    </div>
+  </div>
+
+</div>
