Adds additional info to user profile like college, hometown, and phone number

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,11 +42,11 @@
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>College:</strong></div>
-          <div class="col-sm-7">{Missing info}</div>
+          <div class="col-sm-7"><%= profile.college %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Hometown:</strong></div>
-          <div class="col-sm-7">{Missing info}</div>
+          <div class="col-sm-7"><%= profile.hometown %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Lives at:</strong></div>
@@ -60,7 +60,7 @@
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Telephone</strong></div>
-          <div class="col-sm-7">{Missing info}</div>
+          <div class="col-sm-7"><%= profile.telephone %></div>
         </div>
       </div>
 
