Adds city/state info to users profile page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,8 +49,8 @@
           <div class="col-sm-7"><%= profile.hometown %></div>
         </div>
         <div class="row">
-          <div class="col-sm-5"><strong>Lives at:</strong></div>
-          <div class="col-sm-7">{Missing info}</div>
+          <div class="col-sm-5"><strong>Lives in:</strong></div>
+          <div class="col-sm-7"><%= "#{address.city}, #{address.state}" %></div>
         </div>
 
         <h2 class="h4 top-buffer">Contact information</h2>
