Adds lives_in to profile model
I misread mocks for user profile page and realized addresses aren't
needed. I've left addresses in the schema, but now 'lives in' and 'home
town' sections come from profile and not address.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -50,7 +50,7 @@
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Lives in:</strong></div>
-          <div class="col-sm-7"><%= "#{address.city}, #{address.state}" %></div>
+          <div class="col-sm-7"><%= profile.lives_in %></div>
         </div>
 
         <h2 class="h4 top-buffer">Contact information</h2>
