--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,38 +1,7 @@
 <div class="row">
   <div class="col-sm-10 offset-sm-1 .offset-md-1">
-    <div class="row">
-      <div class="col-sm-12 profile-large-image">
-        <div class="row">
-          <div class="col-sm-3">
-            <img src="http://lorempixel.com/150/200/people" alt="">
-          </div>
-          <div class="col-sm-8">
-            <p class="h4">
-              <%= profile.name %>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <ul class="nav nav-pills col-sm-7 offset-sm-3">
-        <li class="nav-item"><a class="nav-link" href="#">Timeline</a></li>
-        <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Photos</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Friends</a></li>
-        <li class="nav-item">
-          <% if current_user && current_user.id == @user.id %>
-              <%= link_to 'Edit profile', edit_user_path(@user), class: 'nav-link' %>
-          <% end %>
-        </li>
-      </ul>
-    </div>
+    <%= render partial: 'profile_header', locals: { user: user, profile: profile } %>
 
-    <div class="row">
-      <div class="col-sm-12 top-buffer">
-        <h1 class="h3 text-center bg-info">About</h1>
-      </div>
-    </div>
     <div class="row top-buffer">
       <div class="col-sm-5">
         <h2 class="h4">Basic information</h2>
@@ -56,7 +25,7 @@
         <h2 class="h4 top-buffer">Contact information</h2>
         <div class="row">
           <div class="col-sm-5"><strong>Email</strong></div>
-          <div class="col-sm-7"><%= @user.email %></div>
+          <div class="col-sm-7"><%= user.email %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Telephone</strong></div>
