--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,9 +17,9 @@
   <% @users.each do |user| %>
       <tr>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Show', user_profile_path(user, user.profile) %></td>
         <% if current_user && current_user.id == user.id %>
-            <td><%= link_to 'Edit', edit_user_path(user) %></td>
+            <td><%= link_to 'Edit', edit_user_profile_path(user, user.profile) %></td>
             <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
         <% end %>
         </td>
