Adds logout path; fixes a few signup bugs

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -40,8 +40,9 @@
           <legend>Birthday</legend>
           <%= profile_fields.date_select :birthdate,
                                          { order: [:month, :day, :year],
-                                           start_year: Date.today.year - 100,
-                                           end_year: Date.today.year - 12 },
+                                           start_year: Date.today.year - 50,
+                                           end_year: Date.today.year - 12,
+                                           selected: Date.today.year - 21 },
                                          class: 'custom-select' %>
         </fieldset>
 
