--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-10 offset-sm-1 .offset-md-1">
     <%= render partial: 'profile_header', locals: { user: user, profile: profile } %>
 
-    <%= form_with model: [user, profile] do |form| %>
+    <%= form_with model: [user, profile], local: true do |form| %>
         <div class="row top-buffer">
           <div class="col-sm-5">
             <h2 class="h4">Basic information</h2>
