--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users</h1>
 <% if logged_in_user? %>
-    <p><%= link_to 'Sign out', session_path, method: :delete %></p>
+    <p><%= link_to 'Sign out', logout_path %></p>
 <% else %>
     <p><%= link_to 'Log in', login_path %></p>
 <% end %>
