--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -36,6 +36,6 @@
   </div>
   <div class="col-sm-5">
     <h1 class="h2">Sign up</h1>
-    <%= render 'form', user: @user %>
+    <%= render 'form', account: account, user: user %>
   </div>
 </div>
