--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,44 +1,44 @@
 <div class="row">
   <div class="col-sm-10 offset-sm-1 .offset-md-1">
-    <%= render partial: 'profile_header', locals: { user: user, profile: profile } %>
+    <%= render partial: 'profile_header', locals: { user: @user } %>
 
     <div class="row top-buffer">
       <div class="col-sm-5">
         <h2 class="h4">Basic information</h2>
         <div class="row">
           <div class="col-sm-5"><strong>Birthday:</strong></div>
-          <div class="col-sm-7"><%= profile.birthdate %></div>
+          <div class="col-sm-7"><%= @user.birthdate %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>College:</strong></div>
-          <div class="col-sm-7"><%= profile.college %></div>
+          <div class="col-sm-7"><%= @user.college %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Hometown:</strong></div>
-          <div class="col-sm-7"><%= profile.hometown %></div>
+          <div class="col-sm-7"><%= @user.hometown %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Lives in:</strong></div>
-          <div class="col-sm-7"><%= profile.lives_in %></div>
+          <div class="col-sm-7"><%= @user.lives_in %></div>
         </div>
 
         <h2 class="h4 top-buffer">Contact information</h2>
         <div class="row">
           <div class="col-sm-5"><strong>Email</strong></div>
-          <div class="col-sm-7"><%= user.email %></div>
+          <div class="col-sm-7"><%= @user.account.email %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>Telephone</strong></div>
-          <div class="col-sm-7"><%= profile.telephone %></div>
+          <div class="col-sm-7"><%= @user.telephone %></div>
         </div>
       </div>
 
 
       <div class="col-sm-7">
         <h2 class="h4">Words to live by</h2>
-        <%= profile.words_live_by %>
+        <%= @user.words_live_by %>
         <p><h2 class="h4 top-buffer">About me</h2></p>
-        <p><%= profile.about_me %></p>
+        <p><%= @user.about_me %></p>
       </div>
     </div>
   </div>
