--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,27 +1,22 @@
-<div class="row">
-  <div class="col-sm-12">
-    <nav class="navbar navbar-dark bg-primary">
-      <h1 class="navbar-brand text-light">Danebook</h1>
-      <%= form_with url: session_path, class: 'form-inline' do |form| %>
-          <div class="form-control">
-            <label>
-              Email:
-              <%= form.text_field :email %>
-            </label>
-          </div>
+<% content_for :main_nav do %>
+    <%= form_with url: session_path, class: 'form-inline' do |form| %>
+        <div class="form-control">
+          <label>
+            Email:
+            <%= form.text_field :email %>
+          </label>
+        </div>
 
-          <div class="form-control">
-            <label>
-              Password:
-              <%= form.password_field :password %>
-            </label>
-          </div>
+        <div class="form-control">
+          <label>
+            Password:
+            <%= form.password_field :password %>
+          </label>
+        </div>
 
-          <div><%= form.submit 'Login', class: 'btn btn-primary' %></div>
-      <% end %>
-    </nav>
-  </div>
-</div>
+        <div><%= form.submit 'Login', class: 'btn btn-primary' %></div>
+    <% end %>
+<% end %>
 
 <div class="row top-buffer">
   <div class="col-sm-7">
