--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -1,3 +1,17 @@
+<% content_for :main_nav do %>
+    <%= form_with url: '#', class: 'form-inline' do |form| %>
+        <div class="form-control">
+          <%= form.search_field :user,
+                                placeholder: 'Search for users',
+                                class: 'col-sm-10' %>
+        </div>
+
+        <div><%= form.submit 'Search', class: 'btn btn-primary' %></div>
+    <% end %>
+
+    <h1 class="navbar-brand text-light"><%= @user.name %></h1>
+<% end %>
+
 <div class="row">
   <div class="col-sm-12 profile-large-image">
     <div class="row">
