--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -26,7 +26,7 @@
 <div class="row">
   <ul class="nav nav-pills col-sm-7 offset-sm-3">
     <li class="nav-item"><a class="nav-link" href="#">Timeline</a></li>
-    <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
+    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
     <li class="nav-item"><a class="nav-link" href="#">Photos</a></li>
     <li class="nav-item"><a class="nav-link" href="#">Friends</a></li>
     <li class="nav-item">
@@ -35,10 +35,4 @@
       <% end %>
     </li>
   </ul>
-</div>
-
-<div class="row">
-  <div class="col-sm-12 top-buffer">
-    <h1 class="h3 text-center bg-info">About</h1>
-  </div>
 </div>
