--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,11 @@
 <div class="row">
   <div class="col-sm-10 offset-sm-1 .offset-md-1">
     <%= render partial: 'profile_header', locals: { user: @user } %>
+    <div class="row">
+      <div class="col-sm-12 top-buffer">
+        <h1 class="h3 text-center bg-info">Edit profile</h1>
+      </div>
+    </div>
 
     <%= form_with model: @user, local: true do |form| %>
         <div class="row top-buffer">
