--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,12 @@
   <div class="col-sm-10 offset-sm-1 .offset-md-1">
     <%= render partial: 'profile_header', locals: { user: @user } %>
 
+    <div class="row">
+      <div class="col-sm-12 top-buffer">
+        <h1 class="h3 text-center bg-info">About</h1>
+      </div>
+    </div>
+
     <div class="row top-buffer">
       <div class="col-sm-5">
         <h2 class="h4">Basic information</h2>
