Reroutes unkown routes to logout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <div class="row"><p id="notice"><%= notice %></p></div>
+    <div class="row"><p id="notice" class="col-sm-12"><%= notice %></p></div>
 
     <%= yield %>
   </div>
