--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -9,7 +9,7 @@
         <div><%= form.submit 'Search', class: 'btn btn-primary' %></div>
     <% end %>
 
-    <h1 class="navbar-brand text-light"><%= @user.name %></h1>
+    <h1 class="navbar-brand text-light"><%= user.name %></h1>
 <% end %>
 
 <div class="row">
@@ -17,22 +17,11 @@
     <div class="row">
       <div class="col-sm-8 offset-sm-3">
         <p class="h4">
-          <%= @user.name %>
+          <%= user.name %>
         </p>
       </div>
     </div>
   </div>
 </div>
-<div class="row">
-  <ul class="nav nav-pills col-sm-7 offset-sm-3">
-    <li class="nav-item"><a class="nav-link" href="#">Timeline</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Photos</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Friends</a></li>
-    <li class="nav-item">
-      <% if current_user && current_user.id == user.id %>
-          <%= link_to 'Edit profile', edit_user_path(user), class: 'nav-link' %>
-      <% end %>
-    </li>
-  </ul>
-</div>
+
+<%= render partial: 'user_nav_bar', locals: { user: user } %>
