--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -24,4 +24,4 @@
   </div>
 </div>
 
-<%= render partial: 'user_nav_bar', locals: { user: user } %>
+<%= render partial: 'users/user_nav_bar', locals: { user: user } %>
