--- a/app/views/users/_user_nav_bar.html.erb
+++ b/app/views/users/_user_nav_bar.html.erb
@@ -1,8 +1,11 @@
 <div class="row">
   <ul class="nav nav-pills col-sm-7 offset-sm-3">
-    <li class="nav-item"><a class="nav-link" href="#">Timeline</a></li>
+    <li class="nav-item nav-link <%= active_nav_item_if(timeline_path(user)) %>">
+      <%= link_to_unless_current 'Timeline', timeline_path(user) %>
+      <!--<a class="nav-link" href="#">Timeline</a>-->
+    </li>
 
-    <li class="nav-item nav-link <%= active_nav_item_if(user_path) %>">
+    <li class="nav-item nav-link <%= active_nav_item_if(user_path(user)) %>">
       <%= link_to_unless_current 'About', user_path(user) %>
     </li>
 
@@ -13,7 +16,7 @@
     <li class="nav-item">
       <% if current_user && current_user.id == user.id %>
           <%= link_to 'Edit profile', edit_user_path(user),
-                      class: "nav-link #{active_nav_item_if(edit_user_path)}" %>
+                      class: "nav-link #{active_nav_item_if(edit_user_path(user))}" %>
       <% end %>
     </li>
   </ul>
