--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,7 +13,7 @@
         <h2 class="h4">Basic information</h2>
         <div class="row">
           <div class="col-sm-5"><strong>Birthday:</strong></div>
-          <div class="col-sm-7"><%= @user.birthdate %></div>
+          <div class="col-sm-7"><%= @user.formatted_birthdate %></div>
         </div>
         <div class="row">
           <div class="col-sm-5"><strong>College:</strong></div>
