--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -6,16 +6,6 @@
     <p><%= post.body %></p>
   </div>
   <div class="card-header">
-    <div class="row">
-      <div class="col-sm-5">
-        <%= link_to 'Like', '#', class: 'mr-sm-2' %>
-        <%= link_to 'Comment', '#' %>
-      </div>
-      <% if current_user && current_user.id == user.id %>
-          <div class="col-sm-3 offset-sm-4">
-            <%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'You sure?' } %>
-          </div>
-      <% end %>
-    </div>
+    <%= render partial: 'post_actions', locals: { post: post, user: user } %>
   </div>
 </div>
