--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -10,15 +10,7 @@
 
     <div class="row">
       <div class="col-sm-12">
-        <% if post.is_liked? %>
-          <% if post.liked_by_user? current_user %>
-          'You and'
-          <% end %>
-
-          <%= UserDecorator.new(post.likes.first.user).name %>
-          and <%= post.likable_count %> other(s) like this.
-        <% end %>
-
+        <%= post.likes_info(current_user)%>
       </div>
     </div>
   </div>
