Adds ability to create/delete comments on posts

--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <%= render partial: 'comments/post_comments',
-               locals: { comments: decorated_comments(post), user: user } %>
+               locals: { comments: decorated_comments(post), post: post } %>
 
   </div>
 </div>
