--- a/app/views/comments/_post_comments.html.erb
+++ b/app/views/comments/_post_comments.html.erb
@@ -5,7 +5,8 @@
 
       <div class="card bottom-buffer">
         <div class="card-body">
-          <p><%= link_to user.name, user_path(user) %> <br>
+          <p><%= link_to UserDecorator.new(comment.user).name,
+                         user_path(comment.user) %> <br>
             <span class="text-secondary">Posted on <%= comment.formatted_date %></span></p>
 
           <p><%= comment.body %></p>
@@ -21,9 +22,18 @@
             </div>
           <% end %>
         </div>
-      </div>
 
+        <div class="card-header">
+          <% if current_user && current_user.id == comment.user.id %>
+            <div class="float-right">
+              <%= link_to 'Delete', post_comment_path(post, comment), method: :delete, data: { confirm: 'You sure?' } %>
+            </div>
+          <% end %>
+        </div>
+      </div>
 
     </div>
   </div>
 <% end %>
+
+<%= render partial: 'comments/form', locals: { post: post } %>
