--- a/app/views/comments/_post_comments.html.erb
+++ b/app/views/comments/_post_comments.html.erb
@@ -12,21 +12,19 @@
           <p><%= comment.body %></p>
         </div>
         <div class="card-header">
-          <% if false %>
-            <%= render partial: 'post_actions', locals: { post: post, user: user } %>
+          <%= render partial: 'post_and_comment_actions', locals: { resource: comment, user: comment.post.user } %>
 
-            <div class="row">
-              <div class="col-sm-12">
-                <%= comment.likes_info(current_user) %>
-              </div>
+          <div class="row">
+            <div class="col-sm-12">
+              <%= comment.likes_info(current_user) %>
             </div>
-          <% end %>
+          </div>
         </div>
 
         <div class="card-header">
           <% if current_user && current_user.id == comment.user.id %>
             <div class="float-right">
-              <%= link_to 'Delete', post_comment_path(post, comment), method: :delete, data: { confirm: 'You sure?' } %>
+              <%= link_to 'Delete', comment_path(comment), method: :delete, data: { confirm: 'You sure?' } %>
             </div>
           <% end %>
         </div>
