--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -3,7 +3,7 @@
       <div class="col">
         <% if account.errors.any? %>
             <div id="error_explanation" class=" alert alert-danger">
-              <h2 class="h5"><%= pluralize(user.errors.count, 'error') %>:</h2>
+              <h2 class="h5"><%= pluralize(account.errors.count, 'error') %>:</h2>
 
               <ul class="list-unstyled">
                 <% account.errors.full_messages.each do |message| %>
