Users can now friend users through timelines
Through the interface, users can add other users as friends by going
to their timeline and clicking the add as friend button.

--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -1,26 +1,37 @@
 <% content_for :main_nav do %>
-    <%= form_with url: '#', class: 'form-inline' do |form| %>
-        <div class="form-control">
-          <%= form.search_field :user,
-                                placeholder: 'Search for users',
-                                class: 'col-sm-10' %>
-        </div>
+  <%= form_with url: '#', class: 'form-inline' do |form| %>
+    <div class="form-control">
+      <%= form.search_field :user,
+                            placeholder: 'Search for users',
+                            class: 'col-sm-10' %>
+    </div>
 
-        <div><%= form.submit 'Search', class: 'btn btn-primary' %></div>
-    <% end %>
+    <div><%= form.submit 'Search', class: 'btn btn-primary' %></div>
+  <% end %>
 
-    <div class="navbar-text text-light"><%= user.name %></div>
-    <div class="nav-link navbar-text"><%= link_to 'logout', logout_path %></div>
+  <div class="navbar-text text-light"><%= user.name %></div>
+  <div class="nav-link navbar-text"><%= link_to 'logout', logout_path %></div>
 <% end %>
 
 <div class="row">
   <div class="col-sm-12 profile-large-image">
     <div class="row">
-      <div class="col-sm-8 offset-sm-3">
+      <div class="col-sm-2 offset-sm-3">
         <p class="h4">
           <%= user.name %>
         </p>
       </div>
+      <% unless user.id == current_user.id %>
+
+        <div class="col-sm-7">
+          <% if user.users_friended_by.include? current_user %>
+            <%= link_to 'Remove friend', '#', class: 'btn btn-primary btn-sm' %>
+          <% else %>
+            <%= link_to 'Add as friend', friendings_path(id: user.id), method: :post, class: 'btn btn-primary btn-sm' %>
+          <% end %>
+        </div>
+
+      <% end %>
     </div>
   </div>
 </div>
