User can view all user friend lists

--- a/app/views/users/_user_nav_bar.html.erb
+++ b/app/views/users/_user_nav_bar.html.erb
@@ -10,7 +10,10 @@
 
     <li class="nav-item"><a class="nav-link" href="#">Photos</a></li>
 
-    <li class="nav-item"><a class="nav-link" href="#">Friends</a></li>
+    <li class="nav-item nav-link <%= active_nav_item_if(friends_path(user)) %>">
+      <%= link_to_unless_current "Friends (#{user.friended_users.count})",
+                                 friends_path(user) %>
+    </li>
 
     <li class="nav-item">
       <% if current_user && current_user.id == user.id %>
