--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,13 +1,31 @@
 <%= content_for :photo_content do %>
-  <div class="card-body text-center">
-    <%= form_with model: Photo.new, url: photos_path do |form| %>
-      <p class="card-text">Select a photo from your hard drive...</p>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-sm-6 offset-sm-3">
+        <%= form_with model: Photo.new, url: photos_path do |url_form| %>
+          <p class="card-text text-center">Paste the URL to a photo on the Web...</p>
+          <%= url_form.text_field :remote_file_path_url, class: 'form-control' %>
+          <div class="col-sm-12 text-center">
+            <%= url_form.submit 'Upload from Web', class: 'btn btn-primary btn-sm top-buffer bottom-buffer' %></div>
+        <% end %>
 
-      <div class="top-buffer"><%= form.file_field :file_path, accept: 'image/png,image/gif,image/jpeg' %></div>
 
-      <div class="col-sm-12"><%= form.submit 'Upload photo', class: 'btn btn-primary btn-sm top-buffer bottom-buffer' %></div>
-      <div class="col-sm-12"><%= link_to 'Cancel', photo_list_path(current_user), class: 'btn btn-secondary btn-sm' %></div>
-    <% end %>
+
+
+        <%= form_with model: Photo.new, url: photos_path do |disk_form| %>
+          <p class="card-text text-center top-buffer">Select a photo from your hard drive...</p>
+
+          <div class="top-buffer text-center">
+            <%= disk_form.file_field :file_path, accept: 'image/png,image/gif,image/jpeg' %>
+          </div>
+
+          <div class="col-sm-12 text-center"><%= disk_form.submit 'Upload from file', class: 'btn btn-primary btn-sm top-buffer bottom-buffer' %></div>
+          <div class="col-sm-12 text-center"><%= link_to 'Cancel', photo_list_path(current_user), class: 'btn btn-secondary btn-sm' %></div>
+        <% end %>
+
+      </div>
+
+    </div>
   </div>
 <% end %>
 
