--- a/app/views/users/_profile_header.html.erb
+++ b/app/views/users/_profile_header.html.erb
@@ -16,7 +16,10 @@
 <div class="row">
   <div class="col-sm-12 profile-large-image">
     <div class="row">
-      <div class="col-sm-2 offset-sm-3">
+      <div class="col-sm-4 offset-sm-1 bottom-buffer">
+        <% if user.avatar.present? %>
+          <%= image_tag user.avatar, size: '125', class: 'float-left mr-sm-2' %>
+        <% end %>
         <p class="h4">
           <%= user.name %>
         </p>
