--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -3,11 +3,20 @@
     <div class="row">
       <div class="col-sm-7">
         <%= image_tag photo.file_path.url, class: 'img-fluid' %>
-        <%= link_to_if user.id == current_user.id,
-                       'Set as profile',
-                       photo_set_profile_path(photo),
-                       method: :post,
-                       class: 'float-right' %>
+
+        <% if user.id == current_user.id %>
+          <div class="float-right">
+            <%= link_to 'Set as profile',
+                        photo_set_profile_path(photo),
+                        method: :post
+            %>
+            <br>
+            <%= link_to 'Set as cover',
+                        photo_set_cover_path(photo),
+                        method: :post %>
+          </div>
+        <% end %>
+
       </div>
 
       <div class="col-sm-5">
