Bug fix: current user can no longer destroy another's friendship
If a user visited another user's friends page, they could 'unfriend'
one of that user's friends. This is fixed--logged in user can only
manage their own friendships.

--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -12,7 +12,7 @@
           <div class="card-header text-center h4">Friends</div>
           <div class="card-body">
 
-            <% unless friends.count > 0  %>
+            <% unless friends.count > 0 %>
               <h2 class="h4">Friendless at the moment...</h2>
             <% end %>
 
@@ -22,14 +22,18 @@
                 <div class="col-sm-6">
                   <div class="card bottom-buffer">
                     <div class="card-body">
-                        <div class="card-text">
-                          <%= link_to friend.name, user_path(friend) %>
+                      <div class="card-text">
+                        <%= link_to friend.name, user_path(friend) %>
+
+                        <% if user.id == current_user.id %>
                           <%= link_to 'Unfriend me',
                                       friending_path(friend),
                                       method: :delete,
                                       class: 'btn btn-secondary btn-sm ml-5' %>
-                        </div>
-                        <div class="card-text text-secondary"><%= "#{friend.friended_users.count} friends" %></div>
+                        <% end %>
+
+                      </div>
+                      <div class="card-text text-secondary"><%= "#{friend.friended_users.count} friends" %></div>
                     </div>
                   </div>
                 </div>
