Adds photo widget to user timeline
This displays a random sample of 1 to 9 user photos. If more than 9,
there is a link to user's photos page. If user has no photos, displays
message in widget.

--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -17,6 +17,10 @@
             <p class="card-text"><strong>Lives in:</strong> <%= user.lives_in %></p>
           </div>
         </div>
+
+        <%= render partial: 'photos_widget',
+                   locals: { displayable_photos: displayable_photos, user: user } %>
+
       </div>
 
       <div class="col-sm-7">
