--- a/app/views/users/_user_nav_bar.html.erb
+++ b/app/views/users/_user_nav_bar.html.erb
@@ -9,11 +9,11 @@
     </li>
 
     <li class="nav-item nav-link <%= active_nav_item_if(photo_list_path(user)) %>">
-      <%= link_to_unless_current 'Photos', photo_list_path(user) %>
+      <%= link_to_unless_current "Photos (#{user.photos.size})", photo_list_path(user) %>
     </li>
 
     <li class="nav-item nav-link <%= active_nav_item_if(friends_path(user)) %>">
-      <%= link_to_unless_current "Friends (#{user.friended_users.count})",
+      <%= link_to_unless_current "Friends (#{user.friended_users.size})",
                                  friends_path(user) %>
     </li>
 
