--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -21,6 +21,9 @@
         <%= render partial: 'photos_widget',
                    locals: { displayable_photos: displayable_photos, user: user } %>
 
+        <%= render partial: 'friends_widget',
+                   locals: { displayable_friends: displayable_friends, user: user } %>
+
       </div>
 
       <div class="col-sm-7">
