--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <div class="card">
       <div class="card-body">
-        <%= form_with model: [post, Comment.new] do |form| %>
+        <%= form_with model: [commentable, Comment.new] do |form| %>
           <div class="form-group">
             <%= form.text_area :body, placeholder: 'Write a comment...', class: 'form-control' %>
           </div>
