--- a/app/views/timelines/_post_and_comment_actions.html.erb
+++ b/app/views/timelines/_post_and_comment_actions.html.erb
@@ -1,10 +1,6 @@
 <div class="row">
   <div class="col-sm-5">
-    <% if resource.liked_by_user? current_user %>
-        <%= link_to 'Unlike', url_for([resource, :like]), method: :delete, class: 'mr-sm-2' %>
-    <% else %>
-        <%= link_to 'Like', url_for([resource, :likes]), method: :post, class: 'mr-sm-2' %>
-    <% end %>
+    <%= likable_actions(resource) %>
   </div>
   <% if current_user && current_user.id == user.id %>
       <div class="col-sm-3 offset-sm-4">
