Moves like-related methods, repeated across 3 models, into single decorator: LikableDecorator

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -29,7 +29,7 @@
 
               <%= user.name %><br>
               <span class="text-secondary">
-                    <%= photo.formatted_date %>
+                    <%= photo.formatted_upload_date %>
                   </span>
             </div>
           </div>
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-sm-12">
             <div class="card-text">
-              <%= likable_actions photo %>
+              <%= likable_actions LikableDecorator.new(photo) %>
               <%= LikableDecorator.new(photo).likes_info(current_user) %>
             </div>
           </div>
