Adds space between comments on photos

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
 
-      <div class="card comment bottom-buffer">
+      <div class="card comment top-buffer">
         <div class="card-body">
           <p><%= link_to UserDecorator.new(comment.user).name,
                          user_path(comment.user) %> <br>
