Adds newsfeed for user
User sees own newsfeed immediately after signin; can't see other newsfeeds.
This also fixes failing tests--failed because of new feature.

--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -28,7 +28,7 @@
 
       <div class="col-sm-7">
         <% if current_user && current_user.id == user.id %>
-          <%= render partial: 'create_post', locals: { user: user } %>
+          <%= render partial: 'timelines/create_post', locals: { user: user } %>
         <% end %>
 
         <% posts.each do |post| %>
