--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,3 +25,24 @@
 .text-small-80 {
   font-size: 0.8em;
 }
+
+.profile-pic-container {
+  position: absolute;
+  bottom: -20px;
+  left: 25px;
+  border: 3px solid white;
+  box-shadow: 5px 5px 5px rgba(1, 1, 1, 0.5);
+}
+
+.user-name {
+  text-shadow: 3px 3px 3px rgba(1, 1, 1, 0.5);
+  position: absolute;
+  bottom: 0px;
+  left: 170px;
+}
+
+.friend-button {
+  position: absolute;
+  bottom: 5px;
+  left: 280px;
+}
