Adds link to code repo on signin page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,3 +46,9 @@
   bottom: 5px;
   left: 280px;
 }
+
+.code-link {
+  background-image: image_url('GitHub-Mark-32px.png');
+  background-repeat: no-repeat;
+  padding: 5px 0px 0px 40px;
+}
